force-app/main/default/objects/Membro_da_Campanha_vs_Lead__c/Membro_da_Campanha_vs_Lead__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Descreve a relação entre um status de membro de campanha e os devidos valores para os campos Status e Motivo de Desqualificação no objeto Lead.</description>
    <label>Membro da Campanha vs Lead</label>
</CustomObject>