force-app/main/default/objects/Membro_da_Campanha_vs_Lead__c/fields/Motivo_da_Desqualificacao__c.field-meta.xml
<CustomField>
    <fullName>Motivo_da_Desqualificacao__c</fullName>
    <description>Refere-se ao valor do campo lista de opções Motivo da desqualificação do lead (API: Motivo_da_desqualifica_o_do_lead__c) do objeto Lead.</description>
    <inlineHelpText>Refere-se ao valor do campo lista de opções Motivo da desqualificação do lead (API: Motivo_da_desqualifica_o_do_lead__c) do objeto Lead.</inlineHelpText>
    <label>Motivo da Desqualificação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>