force-app/main/default/objects/Membro_da_Campanha_vs_Lead__c/fields/Status_do_Lead__c.field-meta.xml
<CustomField>
    <fullName>Status_do_Lead__c</fullName>
    <description>Refere-se ao valor do campo lista de opções Status do Lead (API: Status) do objeto Lead.</description>
    <inlineHelpText>Refere-se ao valor do campo lista de opções Status do Lead (API: Status) do objeto Lead.</inlineHelpText>
    <label>Status do Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>