force-app/main/default/objects/Membro_da_Campanha_vs_Lead__c/fields/Status_do_membro_da_campanha__c.field-meta.xml
<CustomField>
    <fullName>Status_do_membro_da_campanha__c</fullName>
    <description>Refere-se ao valor do campo lista de opções Status (API: Status) do objeto Membro da Campanha.</description>
    <inlineHelpText>Refere-se ao valor do campo lista de opções Status (API: Status) do objeto Membro da Campanha.</inlineHelpText>
    <label>Status do membro da campanha</label>
    <length>255</length>
    <type>Text</type>
</CustomField>