force-app/main/default/objects/Membro_da_Campanha_vs_Lead__c/fields/Tipo_da_Campanha__c.field-meta.xml
<CustomField>
    <fullName>Tipo_da_Campanha__c</fullName>
    <description>Refere-se ao valor do campo lista de Opções Tipo (API: Type) do objeto Campanha.</description>
    <inlineHelpText>Refere-se ao valor do campo lista de Opções Tipo (API: Type) do objeto Campanha.</inlineHelpText>
    <label>Tipo da Campanha</label>
    <length>255</length>
    <type>Text</type>
</CustomField>