force-app/main/default/objects/Membro_da_Campanha_vs_Lead__c/listViews/Tudo.listView-meta.xml
<ListView>
    <fullName>Tudo</fullName>
    <columns>NAME</columns>
    <columns>Tipo_da_Campanha__c</columns>
    <columns>Status_do_membro_da_campanha__c</columns>
    <columns>Status_do_Lead__c</columns>
    <columns>Motivo_da_Desqualificacao__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>